sonar tag sonar.exclusion was replaced with sonar.exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectDescription=This project demonstrates a simple node js.
  
 sonar.sources=./
 
-sonar.explusions=./node_modules/*,./kubernetes/*,./terraform/*,./Dockerfile 
+sonar.exclusions=./node_modules/*,./kubernetes/*,./terraform/*,./Dockerfile 
 #only scan my js files 
 sonar.language=js
 
